@@ -92,6 +92,7 @@ Version 1.4 (X/X/XXX)
   * Status message is no longer searched when searching the contact list.
   * Fixed a lot of drag and drop bugs, such as being able to drag a group into another group.
   * Tooltips now display for collapsed groups. (#11951)
+  * The group count is no longer always displayed for collapsed contacts.
  
  Message Styles
   * You can now specify a different style for group chats, and customize all of the preferences independently of a regular chat. (#87)
